src/test/deca/context/valid/protected_same_class.deca

class A {
    protected int x = 5;

    int meth() {
        return this.x;
    }
}

{
    A a = new A();
    println(a.meth());
}
