src/test/deca/context/invalid/protected_other_class.deca

//accès d'un attribut protected interdit depuis une autre class

class A {
    protected int p = 1;
}

class X {
    int f(A a) {
        return a.p;
    }
}

{
}
